# midi_lattice

./: .gitignore  Cargo.toml  LICENSE  README.md  bundler.toml
assets/: theme.css  widgets.css
src/: assets.rs  editor.rs  lib.rs  midi.rs  tuning.rs
src/editor/: color.rs  lattice.rs  note_match_info.rs  note_spectrum.rs  resizer.rs  scale_button.rs  settings_bar.rs  tuning_learn_button.rs
src/editor/lattice/: drag_region.rs  grid.rs  grid_resizer.rs
