[package]
name = "midi_lattice"
version = "0.1.0"
edition = "2021"
authors = ["Yan Han <yanhan13@gmail.com>"]
license = "ISC"
homepage = "https://youtu.be/dQw4w9WgXcQ"
description = "Visualizes incoming MIDI in a tuning lattice"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "assert_process_allocs",
], rev = "96d4e34ac8006d6896684c88c9936eecb7d297d4" }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "96d4e34ac8006d6896684c88c9936eecb7d297d4" }
rtrb = "0.2.3"
heapless = "0.7.16"
triple_buffer = "7.0.0"
hash32 = "0.2.1"
hash32-derive = "0.1.1"
color_space = "0.5.3"
once_cell = "1.18.0"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
